<resources>
    <string name="app_name">KeepFit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_hint">LOGIN</string>
    <string name="firstname_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="dial">DIAL</string>
    <string name="e_mail">E-MAIL</string>
    <string name="google_maps_key">AIzaSyAr_MhDWrqiRSGbDrZ1Wbc69efcEBmQ75Y</string>
    <string name="instructos_phone_logo">instructos_phone_logo</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_user_name">User Name</string>
    <string name="profileEmail">Email</string>
    <string name="profile_home">Home</string>
    <string name="prof_phone_number">Phone Number</string>
    <string name="prof_age">Age</string>
    <string name="current_weight">CURRENT WEIGHT</string>
    <string name="_0">0</string>
    <string name="profile_age">AGE</string>
    <string name="image_button_to_delete_workout">Image Button to delete WorkOut</string>
    <string name="admob_id">ca-app-pub-3955141891671713~9903268778</string>
    <string name="interstitial_full_screen">ca-app-pub-3955141891671713/9492205231</string>

    <string name="login_msg_success">Login Success</string>
    <string name="password_short_error">Password is too short</string>
    <string name="password_required_error">Password is required</string>
    <string name="username_required_error">User name is required</string>
    <string name="logging_in_status">Logging in...</string>
    <string name="login_failed">Login Failed</string>
    <string name="failed_to_load_details">Failed to load User Details</string>

    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_first_name">First Name</string>
    <string name="last_name_signup_hint">Last Name</string>
    <string name="signup_name_required_error">Field required</string>
    <string name="signup_invalid_password_error">Invalid password</string>
    <string name="signup_invalid_email_error">Invalid Email</string>
    <string name="account_created_message">Account Created</string>
    <string name="error_occured">An error occurred</string>
    <string name="password_match_error">Password Must Match</string>

    <string name="workout_exercie_name">Exercise Name</string>
    <string name="workout_btnDate_cont_desc">date_btn_click</string>
    <string name="workout_gym_location">Gym Location</string>
    <string name="workout_reps">REPS</string>
    <string name="workout_sets">SETS</string>
    <string name="workout_btn_add_workout">ADD WORKOUT</string>
    <string name="workout_date">DATE</string>
    <string name="workout_saved_message">Work out saved</string>
    <string name="workout_progress_saving">Saving....</string>
    <string name="workout_date_picker">Date Picker</string>
    <string name="instructor_text">TEXT</string>
    <string name="gym_view_book">BOOK</string>
    <string name="userprofile_btnsave">SAVE</string>
    <string name="userprofile_targetweight">TARGET WEIGHT</string>
    <string name="userprofile_male">Male</string>
    <string name="userprofile_female">Female</string>
    <string name="drawer_title_user_profile">User Profile</string>
    <string name="advertisements">Advertisements</string>
    <string name="about">About</string>
    <string name="about_text">Keep Fit is a fitness app that allows you to locate gyms around your area, keep track of your work out sessions and contact professional gym instructors.</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="advert_info">Keep Fit is a non-profit app, Click the button below to support Android Maestro.</string>
    <string name="refresh_advert">REFRESH ADVERT</string>

    <string name="retrieval_success">Retrieval Success</string>
    <string name="userprofile_saved_success">User Profile Saved</string>
    <string name="userprofile_update_status">Updating...</string>
    <string name="alert_dialog_stmt">Are you sure you want to delete this work out?</string>
    <string name="delete_status">Deleting...</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="preferences">Preferences</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="english">ENGLISH</string>
    <string name="kiswahili">KISWAHILI</string>
    <string name="main_login">LOGIN</string>
    <string name="main_signup">ENGLISH</string>
    <string name="gym_fragment">Gyms</string>
    <string name="instructors_fragment">Instructors</string>
    <string name="workout_fragment">Work Out</string>
    <string name="workoutview_date">DATE :</string>
    <string name="lworkoutview_location">LOCATION :</string>


    <string-array name="ExcerciseName">
        <item>Press-Ups</item>
        <item>Squats</item>
        <item>Pull-Ups</item>
        <item>Sit-Ups</item>
        <item>Lunge</item>
        <item>Plank</item>
    </string-array>

    <string-array name="Gyms">
        <item>Windsor Country Gym</item>
        <item>Strathmore Sports Gym</item>
        <item>Great Body Gym</item>
        <item>Kings Gym and Spa</item>
        <item>Samto Fitness Centre</item>
        <item>Safara Gym</item>
    </string-array>
</resources>
