<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_title_user_profile" />

        <item
            android:id="@+id/preferences"
            android:title="@string/preferences"
            android:icon="@drawable/ic_settings_black_24dp"
            />

        <item
            android:id="@+id/adverts"
            android:title="@string/advertisements"
            android:icon="@drawable/ic_advertisement"
            />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            />

    </group>

</menu>