<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#1F212C"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"
  >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/instructor_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimaryDark"
                android:layout_gravity="center"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="Jabez Magomere" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_gender"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="Male" />


                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tvMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_mail_instructor"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="jaybezdon@gmail.com" />



                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/ic_phone_black_24dp"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="0791533833" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnDial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dial"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:drawableStart="@drawable/ic_phone_white"
                        />

                    <Button
                        android:id="@+id/btnMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:drawableStart="@drawable/ic_mail_white"
                        style="@style/Widget.MaterialComponents.Button.TextButton"

                        />
                    <Button
                        android:id="@+id/btnText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_text"
                        android:drawableStart="@drawable/ic_textsms_white_24dp"
                        style="@style/Widget.MaterialComponents.Button.TextButton"

                        />

                </LinearLayout>


        </LinearLayout>
    </android.support.design.card.MaterialCardView>


</LinearLayout>